added 'atd' into the daemon array

--- a/arch/rc.conf
+++ b/arch/rc.conf
@@ -94,4 +94,4 @@ NETWORK_PERSIST="no"
 #   - prefix a daemon with a ! to disable it
 #   - prefix a daemon with a @ to start it up in the background
 #
-DAEMONS=(syslog-ng network netfs crond alsa slim hal webmin)
+DAEMONS=(syslog-ng network netfs crond alsa slim hal webmin atd)
