--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -10,6 +10,7 @@
 	unstage = reset HEAD --
 	last = log -1 HEAD
 	editor = nano
+	hist = log --pretty=format:\"%h %ad | %s%d [%an]\" --graph --date=short
 [color]
 	ui = auto
 [merge]
