--- a/arch/pacman.conf
+++ b/arch/pacman.conf
@@ -17,7 +17,7 @@ HoldPkg     = pacman glibc
 # If upgrades are available for these packages they will be asked for first
 SyncFirst   = pacman
 #XferCommand = /usr/bin/wget --passive-ftp -c -O %o %u
-#XferCommand = /usr/bin/curl -C - %u > %o
+#XferCommand = /usr/bin/curl -C - -f %u > %o
 #CleanMethod = KeepInstalled
 Architecture = auto
 
@@ -33,6 +33,7 @@ Architecture = auto
 #ShowSize
 #UseDelta
 #TotalDownload
+#CheckSpace
 
 #
 # REPOSITORIES
