--- a/arch/mkinitcpio.conf
+++ b/arch/mkinitcpio.conf
@@ -59,7 +59,13 @@ HOOKS="base udev autodetect pata scsi sata filesystems"
 # COMPRESSION
 # Use this to compress the initramfs image. With kernels earlier than
 # 2.6.30, only gzip is supported, which is also the default. Newer kernels
-# support gzip, bzip2 and lzma.
+# support gzip, bzip2 and lzma. Kernels 2.6.38 and later support xz
+# compression.
 #COMPRESSION="gzip"
 #COMPRESSION="bzip2"
 #COMPRESSION="lzma"
+#COMPRESSION="xz"
+
+# COMPRESSION_OPTIONS
+# Additional options for the compressor
+#COMPRESSION_OPTIONS=""
