--- a/arch/mkinitcpio.conf
+++ b/arch/mkinitcpio.conf
@@ -7,17 +7,17 @@
 MODULES=""
 
 # BINARIES
-# This setting includes, into the CPIO image, and additional
-# binaries a given user may wish.  This is run first, so may
-# be used to override the actual binaries used in a given hook.
-# (Existing files are NOT overwritten is already added)
-# BINARIES are dependancy parsed, so you may safely ignore libraries
+# This setting includes any additional binaries a given user may
+# wish into the CPIO image.  This is run first, so it may be used to
+# override the actual binaries used in a given hook.
+# (Existing files are NOT overwritten if already added)
+# BINARIES are dependency parsed, so you may safely ignore libraries
 BINARIES=""
 
 # FILES
 # This setting is similar to BINARIES above, however, files are added
-# as-is and are not parsed in anyway.  This is useful for config files.
-# Some users may wish to include modprobe.conf for custom module options,
+# as-is and are not parsed in any way.  This is useful for config files.
+# Some users may wish to include modprobe.conf for custom module options
 # like so:
 #    FILES="/etc/modprobe.conf"
 FILES=""
@@ -32,27 +32,27 @@ FILES=""
 # 'udev' is _required_ in order to automatically load modules
 # 'filesystems' is _required_ unless you specify your fs modules in MODULES
 # Examples:
-#    This setup specifies all modules in the MODULES setting above.
-#    No raid, lvm2, or encrypted root is needed.
+##   This setup specifies all modules in the MODULES setting above.
+##   No raid, lvm2, or encrypted root is needed.
 #    HOOKS="base"
 #
-#    This setup will autodetect all modules for your system and should
-#    work as a sane default
+##   This setup will autodetect all modules for your system and should
+##   work as a sane default
 #    HOOKS="base udev autodetect pata scsi sata filesystems"
 #
-#    This is identical to the above, except the old ide subsystem is
-#    used for IDE devices instead of the new pata subsystem.
+##   This is identical to the above, except the old ide subsystem is
+##   used for IDE devices instead of the new pata subsystem.
 #    HOOKS="base udev autodetect ide scsi sata filesystems"
 #
-#    This setup will generate a 'full' image which supports most systems.
-#    No autodetection is done.
+##   This setup will generate a 'full' image which supports most systems.
+##   No autodetection is done.
 #    HOOKS="base udev pata scsi sata usb filesystems"
 #
-#    This setup assembles an pata raid array with an encrypted root FS.
-#    Note: See 'mkinitcpio -H raid' for more information on raid devices.
+##   This setup assembles a pata raid array with an encrypted root FS.
+##   Note: See 'mkinitcpio -H raid' for more information on raid devices.
 #    HOOKS="base udev pata raid encrypt filesystems"
 #
-#    This setup loads an lvm2 volume group on a usb device.
+##   This setup loads an lvm2 volume group on a usb device.
 #    HOOKS="base udev usb lvm2 filesystems"
 HOOKS="base udev autodetect pata scsi sata filesystems"
 
