--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -10,7 +10,7 @@
 	unstage = reset HEAD --
 	last = log -1 HEAD
 	editor = /usr/bin/vim
-	hist = log --pretty=format:\"%h %ad | %s%d [%an]\" --graph --date=short
+	hist = log --pretty=format:"%h %ad | %s%d [%an]" --graph --date=short
 [color]
 	ui = auto
 [merge]
