--- a/slim/slim.conf
+++ b/slim/slim.conf
@@ -2,7 +2,7 @@
 # Note: -xauth $authfile is automatically appended
 default_path        /bin:/usr/bin:/usr/local/bin
 default_xserver     /usr/bin/X
-xserver_arguments   -nolisten tcp vt07
+xserver_arguments -nolisten tcp vt07
 
 # Commands for halt, login, etc.
 halt_cmd            /sbin/shutdown -h now
@@ -51,7 +51,7 @@ login_cmd           exec /bin/bash -login ~/.xinitrc %session
 # The current chosen session name is replaced in the login_cmd
 # above, so your login command can handle different sessions.
 # see the xinitrc.sample file shipped with slim sources
-sessions            xfce4,icewm,wmaker,blackbox
+sessions            xfce4,icewm-session,wmaker,blackbox
 
 # Executed when pressing F11 (requires imagemagick)
 screenshot_cmd      import -window root /slim.png
