--- a/xorg/xorg.conf
+++ b/xorg/xorg.conf
@@ -6,6 +6,9 @@ Section "ServerLayout"
     Screen      0  "Screen0"
     InputDevice    "Keyboard0" "CoreKeyboard"
     InputDevice    "Mouse0" "CorePointer"
+    InputDevice    "cursor" "SendCoreEvents" 
+    InputDevice    "stylus" "SendCoreEvents"
+    InputDevice    "eraser" "SendCoreEvents"
 EndSection
 
 Section "Files"
@@ -52,3 +55,34 @@ Section "Screen"
     EndSubSection
 EndSection
 
+Section "InputDevice"
+    Driver        "wacom"
+    Identifier    "stylus"
+    Option        "Device"       "/dev/input/wacom"
+    Option        "Type"         "stylus"
+    Option        "USB"          "on"                 # USB ONLY
+    Option        "Mode"         "Relative"           # other option: "Absolute"
+    Option        "Vendor"       "WACOM"
+    Option        "tilt"         "on"  # add this if your tablet supports tilt
+    Option        "Threshold"    "5"   # the official linuxwacom howto advises this line
+EndSection
+Section "InputDevice"
+    Driver        "wacom"
+    Identifier    "eraser"
+    Option        "Device"       "/dev/input/wacom"
+    Option        "Type"         "eraser"
+    Option        "USB"          "on"                  # USB ONLY
+    Option        "Mode"         "Relative"            # other option: "Absolute"
+    Option        "Vendor"       "WACOM"
+    Option        "tilt"         "on"  # add this if your tablet supports tilt
+    Option        "Threshold"    "5"   # the official linuxwacom howto advises this line
+EndSection
+Section "InputDevice"
+    Driver        "wacom"
+    Identifier    "cursor"
+    Option        "Device"       "/dev/input/wacom"
+    Option        "Type"         "cursor"
+    Option        "USB"          "on"                  # USB ONLY
+    Option        "Mode"         "Relative"            # other option: "Absolute"
+    Option        "Vendor"       "WACOM"
+EndSection
