--- a/slim/slim.conf
+++ b/slim/slim.conf
@@ -1,6 +1,6 @@
 # Path, X server and arguments (if needed)
 # Note: -xauth $authfile is automatically appended
-default_path        /bin:/usr/bin:/usr/local/bin
+default_path        /bin:/usr/bin:/usr/local/bin:/sbin:/usr/sbin
 default_xserver     /usr/bin/X
 xserver_arguments -nolisten tcp vt07
 
