--- a/slim/slim.conf
+++ b/slim/slim.conf
@@ -51,7 +51,7 @@ login_cmd           exec /bin/bash -login ~/.xinitrc %session
 # The current chosen session name is replaced in the login_cmd
 # above, so your login command can handle different sessions.
 # see the xinitrc.sample file shipped with slim sources
-sessions            awesome,openbox-session,dwm-personalised,xbmc
+sessions            awesome,openbox-session,dwm-personalised,xbmc,monsterwm_start
 
 # Executed when pressing F11 (requires imagemagick)
 screenshot_cmd      import -window root /slim.png
