xorg.conf - added section on fonts
- found this in the arch wiki entry for fonts, so that local font folders are
  recognised

--- a/xorg/xorg.conf
+++ b/xorg/xorg.conf
@@ -86,3 +86,15 @@ Section "InputDevice"
     Option        "Mode"         "Relative"            # other option: "Absolute"
     Option        "Vendor"       "WACOM"
 EndSection
+# Let Xorg know about the custom font directories
+Section "Files"
+    FontPath    "/usr/share/fonts/100dpi"
+    FontPath    "/usr/share/fonts/75dpi"
+    FontPath    "/usr/share/fonts/cyrillic"
+    FontPath    "/usr/share/fonts/encodings"
+    FontPath    "/usr/share/fonts/local"
+    FontPath    "/usr/share/fonts/misc"
+    FontPath    "/usr/share/fonts/TTF"
+    FontPath    "/usr/share/fonts/Type1"
+    FontPath    "/usr/share/fonts/util"
+EndSection
