rc,conf - adjusted daemons array
- removed hal altogether as it has been uninstalled
- commented out slim with a view to moving away from consolekit (now that I am
  logging in and invoking window manager via console)

--- a/arch/rc.conf
+++ b/arch/rc.conf
@@ -38,4 +38,4 @@ NETWORK_PERSIST="no"
 # -------
 #
 # default setting: DAEMONS=(syslog-ng network crond)
-DAEMONS=(syslog-ng network netfs crond alsa dbus slim !hal !webmin atd)
+DAEMONS=(syslog-ng network netfs crond alsa dbus !slim !webmin atd)
