--- a/arch/rc.conf
+++ b/arch/rc.conf
@@ -1,30 +1,40 @@
 #
-# /etc/rc.conf - Main Configuration for Arch Linux
+# /etc/rc.conf - configuration file for initscripts
 #
-# See 'man 5 rc.conf' for more details
+# Most of rc.conf has been replaced by various other configuration
+# files. See archlinux(7) for details.
 #
+# For more details on rc.conf see rc.conf(5).
+#
+
+DAEMONS=(syslog-ng network netfs crond alsa dbus !slim !webmin atd)
 
 # LOCALIZATION
 # ------------
-HARDWARECLOCK="UTC"
-TIMEZONE="Australia/Brisbane"
-KEYMAP="us"
-CONSOLEFONT=
-CONSOLEMAP=
-LOCALE="en_US.UTF-8"
-DAEMON_LOCALE="yes"
-USECOLOR="yes"
+#HARDWARECLOCK="UTC" # commented out with migration to systemd config
+#TIMEZONE="Australia/Brisbane" # commented out with migration to systemd config
+#KEYMAP="us" # commented out with migration to systemd config
+#CONSOLEFONT= # commented out with migration to systemd config
+#CONSOLEMAP= # commented out with migration to systemd config
+#LOCALE="en_US.UTF-8" # commented out with migration to systemd config
+#DAEMON_LOCALE="yes" # commented out with migration to systemd config
+#USECOLOR="yes" # commented out with migration to systemd config
+# Storage
+#
+USEDMRAID="no"
+USELVM="no"
 
 # HARDWARE
 # --------
-MODULES=(vboxdrv)
-USEDMRAID="no"
-USEBTRFS="no"
-USELVM="no"
+#MODULES=(vboxdrv) # commented out with migration to systemd config
+#USEBTRFS="no" # commented out with migration to systemd config
 
+
+
+# Network
 # NETWORKING
 # ----------
-HOSTNAME="myhost"
+#HOSTNAME="myhost" # commented out with migration to systemd config
 
 interface=eth0
 address=192.168.1.1
@@ -34,8 +44,3 @@ gateway=192.168.1.254
 
 NETWORK_PERSIST="no"
 
-# DAEMONS
-# -------
-#
-# default setting: DAEMONS=(syslog-ng network crond)
-DAEMONS=(syslog-ng network netfs crond alsa dbus !slim !webmin atd)
