syslinux.cfg - configured to run silently

--- a/syslinux/syslinux.cfg
+++ b/syslinux/syslinux.cfg
@@ -20,14 +20,20 @@
 # The wiki provides further configuration examples
 
 DEFAULT arch
-PROMPT 1        # Set to 1 if you always want to display the boot: prompt 
-TIMEOUT 50
+# original
+#PROMPT 1        # Set to 1 if you always want to display the boot: prompt 
+#TIMEOUT 50
+
+# new settings 2012-07-30
+PROMPT 0        # Set to 1 if you always want to display the boot: prompt 
+TIMEOUT 0
+
 # You can create syslinux keymaps with the keytab-lilo tool
 #KBDMAP de.ktl
 
 # Menu Configuration
 # Either menu.c32 or vesamenu32.c32 must be copied to /boot/syslinux 
-UI menu.c32
+# UI menu.c32	# commented out 2012-07-30
 #UI vesamenu.c32
 
 # Refer to http://syslinux.zytor.com/wiki/index.php/Doc/menu
