--- a/syslinux/syslinux.cfg
+++ b/syslinux/syslinux.cfg
@@ -58,7 +58,7 @@ MENU COLOR tabmsg       31;40   #30ffffff #00000000 std
 LABEL arch
 	MENU LABEL Arch Linux
 	LINUX ../vmlinuz-linux
-	APPEND root=/dev/sda3 ro
+	APPEND root=/dev/sda3 ro init=/bin/systemd 
 	INITRD ../initramfs-linux.img
 
 LABEL archfallback
