arch rc.conf - migrating to systemd
- commented out all daemons

--- a/arch/rc.conf
+++ b/arch/rc.conf
@@ -7,7 +7,7 @@
 # For more details on rc.conf see rc.conf(5).
 #
 
-DAEMONS=(syslog-ng network netfs crond alsa dbus !slim !webmin atd)
+DAEMONS=(!syslog-ng !network !netfs !crond !alsa !dbus !slim !webmin !atd)
 
 
 # Storage
