--- a/motion/motion.conf
+++ b/motion/motion.conf
@@ -231,7 +231,7 @@ output_all off
 # Picture with most motion of an event is saved when set to 'best'.
 # Picture with motion nearest center of picture is saved when set to 'center'.
 # Can be used as preview shot for the corresponding movie.
-output_normal on
+output_normal off
 
 # Output pictures with only the pixels moving object (ghost images) (default: off)
 output_motion off
@@ -639,4 +639,4 @@ quiet on
 # Only put the options that are unique to each camera in the
 # thread config files. 
 thread /home/rob/.motion/thread1.conf
-thread /home/rob/.motion/thread2.conf
+# thread /home/rob/.motion/thread2.conf
