--- a/ncmpcpp/config
+++ b/ncmpcpp/config
@@ -489,3 +489,74 @@ mpd_music_dir = "/home/rob/Music"
 #
 #active_window_border = "red"
 #
+
+#####################################################################
+#  from w0ng's config
+#####################################################################
+# song format
+#~ song_list_format = "{$3%n │ $9}{$7%a - $9}{$5%t$9}|{$8%f$9}$R{$6 │ %b$9}{$3 │ %l$9}"
+#~
+#~ # various settings
+#~ autocenter_mode = "yes"
+#~ progressbar_look = "─╼·"
+#~ user_interface = "alternative"
+#~ alternative_header_first_line_format = "$0$aqqu$/a {$7%a - $9}{$5%t$9}|{$8%f$9} $0$atqq$/a$9"
+#~ alternative_header_second_line_format = "{{$6%b$9}{ [$6%y$9]}}|{%D}"
+#~
+#~ # color definitions
+#~ main_window_color = "default"
+#~ main_window_highlight_color = "default"
+#~ alternative_ui_separator_color = "yellow"
+#~ progressbar_color = "yellow"
+
+#####################################################################
+#  from c00kiemon5ter's config
+#####################################################################
+# playlist
+#
+song_columns_list_format = "(6)[black]{l} (25)[green]{a} (40)[cyan]{t|f} (30)[blue]{b}"
+now_playing_prefix = "$b$4»$7»$1» "
+now_playing_suffix = "$/b"
+playlist_display_mode = "columns" # (classic/columns)
+autocenter_mode = "yes"
+centered_cursor = "yes"
+
+# bars
+#
+song_status_format = "$b$2%a $1/ $3%t $1/ $4%b {(Disc %d) }$1"
+progressbar_look = "─━╶"
+titles_visibility = "no"
+header_visibility = "no"
+
+# browser
+#
+browser_playlist_prefix = "$2plist »$9 "
+browser_display_mode = "columns" # (classic/columns)
+
+# colors
+#
+colors_enabled = "yes"
+discard_colors_if_item_is_selected = "yes"
+header_window_color = "black"
+volume_color = "cyan"
+state_line_color = "black"
+state_flags_color = "yellow"
+main_window_color = "white"
+color1 = "default"
+color2 = "green"
+main_window_highlight_color = "red"
+progressbar_color = "yellow"
+statusbar_color = "black"
+active_column_color = "red"
+visualizer_color = "yellow"
+song_window_title_format = "MPD: {%a > }{%t}{ [%b{ Disc %d}]}|{%f}"
+mpd_crossfade_time = "10"
+
+# misc
+#
+song_window_title_format = "MPD: {%a > }{%t}{ [%b{ Disc %d}]}|{%f}"
+search_engine_display_mode = "columns" (classic/columns)
+follow_now_playing_lyrics = "yes"
+display_screens_numbers_on_start = "no"
+external_editor = "vim"
+use_console_editor = "yes"
